# dash_glpi

./: .gitignore  CLAUDE.md  Claude Code Agent Teams.md  META-PROMPT.md  index.html  on-task-completed.sh  on-teammate-idle.sh  package-lock.json  package.json
.claude/: doc-validation.md
docs/: DESIGN_SYSTEM.md  Liste_Segments.md  Segment 1 - Parser CSV GLPI en Rust pour Tauri 2.md  Segment 2 — Architecture Tauri 2.md  Segment 3 - KPI Stock and Bilan Temporel.md  Segment 4 — Catégories hiérarchiques.md  (+4 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/analytics/: anomalies.rs  clustering.rs  mod.rs  prediction.rs
src-tauri/src/analyzer/: bilan.rs  classifier.rs  dashboard.rs  mod.rs  stats.rs  stock.rs  temporal.rs
src-tauri/src/commands/: analytics.rs  bilan.rs  categories.rs  config.rs  dashboard.rs  delais.rs  export.rs  import.rs  mining.rs  mod.rs  recommandation.rs  search.rs  stock.rs
src-tauri/src/db/: insert.rs  migrations.rs  mod.rs  queries.rs  setup.rs
src-tauri/src/db/sql/: 001_initial.sql  002_priorite_label.sql  003_date_resolution.sql  004_user_stopwords.sql
src-tauri/src/export/: bilan_report.rs  mod.rs  plan_action.rs  stock_report.rs
src-tauri/src/nlp/: clustering.rs  mod.rs  patterns.rs  preprocessing.rs  tfidf.rs
src-tauri/src/parser/: columns.rs  deserializers.rs  mod.rs  pipeline.rs  types.rs
src-tauri/src/recommandation/: mod.rs  profiling.rs  scoring.rs  types.rs
(+83 files in other folders)
